0.10.0: every location shown as City - Country
